k8s/services/ml_server/base/Rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: ml-server
  labels:
    app: ml-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ml-server
  template:
    metadata:
      labels:
        app: ml-server
    spec:
      containers:
        - name: mlops-container
          image: igorsantarek/ml_server
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: google-oauth2-creds-client-secret
              mountPath: /run/secrets/google_oauth2_creds__client_secret
              subPath: data
              readOnly: true
            - name: github-oauth2-creds-client-secret
              mountPath: /run/secrets/github_oauth2_creds__client_secret
              subPath: data
              readOnly: true
            - name: oauth-state-session-secret-key
              mountPath: /run/secrets/oauth_state_session_secret_key
              subPath: data
              readOnly: true
            - name: redis-password
              mountPath: /run/secrets/redis_password
              subPath: redis-password
              readOnly: true
            - name: stripe-secret-key
              mountPath: /run/secrets/stripe__secret_key
              subPath: data
              readOnly: true
            - name: stripe-webhook-secret
              mountPath: /run/secrets/stripe__webhook_secret
              subPath: data
              readOnly: true
            - name: stripe-price-id
              mountPath: /run/secrets/stripe__price_id
              subPath: data
              readOnly: true
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            httpGet:
              path: /api/ping
              port: 8000
          startupProbe:
            httpGet:
              path: /api/ping
              port: 8000
            failureThreshold: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2048Mi"
              cpu: "1"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1001
        runAsGroup: 1001
        runAsNonRoot: true
      volumes:
        - name: tmp
          emptyDir: {}
        - name: google-oauth2-creds-client-secret
          secret:
            secretName: google-oauth2-creds-client-secret
        - name: github-oauth2-creds-client-secret
          secret:
            secretName: github-oauth2-creds-client-secret
        - name: oauth-state-session-secret-key
          secret:
            secretName: oauth-state-session-secret-key
        - name: redis-password
          secret:
            secretName: bitnami-redis
        - name: stripe-secret-key
          secret:
            secretName: stripe-secret-key
        - name: stripe-webhook-secret
          secret:
            secretName: stripe-webhook-secret
        - name: stripe-price-id
          secret:
            secretName: stripe-price-id
  strategy:
    canary: #Indicates that the rollout should use the Canary strategy
      maxSurge: '25%'
      maxUnavailable: 0
      steps:
        - setWeight: 33
        - pause: {} # pause indefinitely
        - setWeight: 66
        - pause: { duration: 10s }
