k8s/services/ml_server/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ml-server-route
spec:
  parentRefs:
  - name: common-gw
    namespace: common-gw
  hostnames:
  - ml-server-production.com
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /api/
      - path:
          type: PathPrefix
          value: /auth/
      - path:
          type: PathPrefix
          value: /docs/
      - path:
          type: Exact
          value: /openapi.json
      - path:
          type: PathPrefix
          value: /checkout/
      - path:
          type: PathPrefix
          value: /billing/
    backendRefs:
    - name: ml-server-svc
      port: 8000
